Add manage-agendaitems and manage-meeting roles to admin and kanselarij group

--- a/app/components/agenda/agenda-header/agenda-actions.hbs
+++ b/app/components/agenda/agenda-header/agenda-actions.hbs
@@ -61,7 +61,7 @@
   >
     {{t "download-documents"}}
   </Menu.Item>
-  {{#if this.currentSession.isEditor}}
+  {{#if (user-may "manage-meetings")}}
     <Menu.Divider />
     <Menu.Item
       data-test-agenda-header-toggle-editing-meeting
