style: bring DocumentCardStep in-line with DocumentCard

--- a/app/components/publications/documents/document-card-step.hbs
+++ b/app/components/publications/documents/document-card-step.hbs
@@ -5,55 +5,40 @@
   <Auk::Panel::Body>
     <Auk::Toolbar @auto={{true}} as |Toolbar|>
       <Toolbar.Group @position="left" as |Group|>
-        <Group.Item class="vlc-u-box-model-maximize-width">
-          <p class="auk-overline">
-            {{@piece.documentContainer.type.label}}
-          </p>
-          <div class="auk-o-flex auk-o-flex--vertical-center vlc-u-box-model-maximize-width">
-            <h6 class="auk-h4 auk-u-m-0 auk-u-mr-2">
-              {{@piece.file.downloadFilename}}
-            </h6>
+        <Group.Item class="auk-u-maximize-width">
+          <div class="auk-o-flex auk-o-flex--vertical-center auk-o-flex--spaced">
+            <span class="auk-overline">
+              {{@piece.documentContainer.type.label}}
+            </span>
+          </div>
+          <h6 class="auk-h4 auk-u-m-0">
+            <LinkTo @route="document" @model={{@piece.id}} target="_blank">
+              {{@piece.name}}{{#if @piece.file}}.{{@piece.file.extension}}{{/if}}
+            </LinkTo>
+          </h6>
+          <div class="vlc-document-card-content__meta">
             {{#if @piece.receivedDate}}
-              <p class="auk-u-text-muted">
-                {{t "received-at"}}
-                {{moment-format @piece.receivedDate}}
-              </p>
+              {{t "received-at"}}
+              {{moment-format @piece.receivedDate}}
             {{/if}}
-            <div>
-              {{#if @piece.file}}
-                <Auk::Button
-                  @skin="borderless"
-                  @layout="icon-only"
-                  @icon="book"
-                  @href={{@piece.viewDocumentURL}}
-                  target="_blank"
-                />
-                <Auk::Button
-                  @skin="borderless"
-                  @layout="icon-only"
-                  @icon="download"
-                  @href={{@piece.file.namedDownloadLink}}
-                  download={{@piece.file.downloadFilename}}
-                />
-                {{#if @isEnabledDelete}}
-                  <Auk::Button
-                    @skin="danger-borderless"
-                    @layout="icon-only"
-                    @icon="trash"
-                    {{on "click" (perform this.deletePiece)}}
-                  />
-                {{/if}}
-              {{/if}}
-            </div>
           </div>
         </Group.Item>
       </Toolbar.Group>
       <Toolbar.Group @position="right" as |Group|>
         <Group.Item class="auk-o-flex">
-          {{#if @piece.accessLevel}}
-            <AccessLevelPill
-              @accessLevel={{await @piece.accessLevel}}
-            />
+          {{#if (and @isEnabledDelete @piece.file)}}
+            <Auk::DropdownMenu
+              @skin="borderless"
+              @icon="three-dots"
+              as |Menu|
+            >
+              <Menu.Item
+                @skin="danger"
+                {{on "click" (perform this.deletePiece)}}
+              >
+                {{t "document-delete"}}
+              </Menu.Item>
+            </Auk::DropdownMenu>
           {{/if}}
         </Group.Item>
       </Toolbar.Group>
