--- a/app/components/publications/documents/document-card-step.hbs
+++ b/app/components/publications/documents/document-card-step.hbs
@@ -3,45 +3,47 @@
   class={{if this.deletePiece.isRunning "vlc-document--deleted-state"}}
 >
   <Auk::Panel::Body>
-    <Auk::Toolbar @auto={{true}} as |Toolbar|>
-      <Toolbar.Group @position="left" as |Group|>
-        <Group.Item class="auk-u-maximize-width">
-          <div class="auk-o-flex auk-o-flex--vertical-center auk-o-flex--spaced">
-            <span class="auk-overline">
-              {{@piece.documentContainer.type.label}}
-            </span>
-          </div>
-          <h6 class="auk-h4 auk-u-m-0">
-            <LinkTo @route="document" @model={{@piece.id}} target="_blank">
-              {{@piece.name}}{{#if @piece.file}}.{{@piece.file.extension}}{{/if}}
-            </LinkTo>
-          </h6>
-          <div class="vlc-document-card-content__meta">
-            {{#if @piece.receivedDate}}
-              {{t "received-at"}}
-              {{moment-format @piece.receivedDate}}
-            {{/if}}
-          </div>
-        </Group.Item>
-      </Toolbar.Group>
-      <Toolbar.Group @position="right" as |Group|>
-        <Group.Item class="auk-o-flex">
-          {{#if (and @isEnabledDelete @piece.file)}}
-            <Auk::DropdownMenu
-              @skin="borderless"
-              @icon="three-dots"
-              as |Menu|
-            >
-              <Menu.Item
-                @skin="danger"
-                {{on "click" (perform this.deletePiece)}}
-              >
-                {{t "document-delete"}}
-              </Menu.Item>
-            </Auk::DropdownMenu>
-          {{/if}}
-        </Group.Item>
-      </Toolbar.Group>
-    </Auk::Toolbar>
+    <div class="vlc-document-card vlc-document-card--borderless">
+      <div class="vlc-document-card__content">
+        <Auk::Toolbar @auto={{true}} as |Toolbar|>
+          <Toolbar.Group @position="left" as |Group|>
+            <Group.Item class="auk-u-maximize-width">
+              <div class="auk-o-flex auk-o-flex--vertical-center auk-o-flex--spaced">
+                <span class="auk-overline">
+                  {{@piece.documentContainer.type.label}}
+                </span>
+              </div>
+              <LinkTo @route="document" @model={{@piece.id}} target="_blank" class="auk-h4">
+                {{@piece.name}}{{#if @piece.file}}.{{@piece.file.extension}}{{/if}}
+              </LinkTo>
+              <div class="vlc-document-card-content__meta">
+                {{#if @piece.receivedDate}}
+                  {{t "received-at"}}
+                  {{moment-format @piece.receivedDate}}
+                {{/if}}
+              </div>
+            </Group.Item>
+          </Toolbar.Group>
+          <Toolbar.Group @position="right" as |Group|>
+            <Group.Item class="auk-o-flex">
+              {{#if (and @isEnabledDelete @piece.file)}}
+                <Auk::DropdownMenu
+                  @skin="borderless"
+                  @icon="three-dots"
+                  as |Menu|
+                >
+                  <Menu.Item
+                    @skin="danger"
+                    {{on "click" (perform this.deletePiece)}}
+                  >
+                    {{t "document-delete"}}
+                  </Menu.Item>
+                </Auk::DropdownMenu>
+              {{/if}}
+            </Group.Item>
+          </Toolbar.Group>
+        </Auk::Toolbar>
+      </div>
+    </div>
   </Auk::Panel::Body>
 </Auk::Panel>
