--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -30,7 +30,7 @@
   @newsletterInfo={{this.newsletterInfo}}
   @allowEditing={{this.currentSession.isEditor}}
 />
-{{#if (is-remark @model.type)}}
+{{#if (is-announcement @model.type)}}
   <Mandatees::MandateesPanel
     @referenceDate={{this.meeting.plannedStart}}
     @mandatees={{this.mandatees}}
