--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-edit.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-edit.hbs
@@ -60,7 +60,7 @@
       />
     </div>
   </div>
-  {{#if (is-remark @agendaitem.type)}}
+  {{#if (is-announcement @agendaitem.type)}}
     <div class="auk-u-mb-4">
       <div class="auk-form-group">
         <Auk::Label for="item-show-in-newsletter">
