--- a/app/components/subcases/subcases-process.hbs
+++ b/app/components/subcases/subcases-process.hbs
@@ -6,7 +6,7 @@
       </div>
       <div class="auk-u-mb-2">
         <p class="auk-overline">
-          {{if (is-remark subcase.agendaItemType) (t "announcement") (t "note")}}
+          {{if (is-announcement subcase.agendaItemType) (t "announcement") (t "note")}}
         </p>
       </div>
       <div class="auk-u-mb-2">
