KAS-3542 fix cypress test by reviving selector

--- a/app/components/documents/linked-document-link.hbs
+++ b/app/components/documents/linked-document-link.hbs
@@ -12,7 +12,13 @@
                 {{@documentContainer.type.label}}
               </span>
             </div>
-            <LinkTo @route="document" @model={{this.lastPiece.id}} target="_blank" class="auk-h4">
+            <LinkTo
+              data-test-linked-document-link-name
+              @route="document"
+              @model={{this.lastPiece.id}}
+              target="_blank"
+              class="auk-h4"
+            >
               {{this.lastPiece.name}}{{#if this.lastPiece.file}}.{{this.lastPiece.file.extension}}{{/if}}
             </LinkTo>
             <div class="vlc-document-card-content__meta">
