--- a/app/templates/search/agenda-items.hbs
+++ b/app/templates/search/agenda-items.hbs
@@ -72,7 +72,7 @@
                 </p>
               </td>
               <td>
-                {{#if (eq row.showAsAnnouncement "true")}}
+                {{#if (is-announcement row.type)}}
                   {{capitalize (t "announcement")}}
                 {{else}}
                   {{t "note"}}
