--- a/app/components/utils/back-button.hbs
+++ b/app/components/utils/back-button.hbs
@@ -1,5 +1,6 @@
 {{!-- TODO: octane-refactor, fix accessibility concern --}}
 {{!-- template-lint-disable no-action no-invalid-interactive --}}
-<AuButton @skin="naked" @icon="hierarchical-back" @iconAlignment="left" data-test-auk-back-button {{action "goToParentRoute"}}>
-  Terug
-</AuButton>
+<Auk::Button @skin="borderless" data-test-auk-back-button {{action "goToParentRoute"}}>
+  <Auk::Icon @name="hierarchical-back" />
+  <span class="au-u-hidden-visually">Terug</span>
+</Auk::Button>
