remove unused argument (left from octane refactor?)

--- a/app/templates/cases/overview.hbs
+++ b/app/templates/cases/overview.hbs
@@ -1,5 +1,5 @@
 {{page-title (t "cases")}}
-<Cases::CasesHeader @isAddingCase={{this.isAddingCase}} @close={{this.close}} />
+<Cases::CasesHeader @close={{this.close}} />
 <div class="auk-scroll-wrapper__body">
   <div class="auk-u-m-8">
     <Auk::Toolbar>
