refactor: rework subcase overview to work with decisionmaking-flow

--- a/app/components/subcases/subcases-history.hbs
+++ b/app/components/subcases/subcases-history.hbs
@@ -7,7 +7,7 @@
 </div>
 {{#if @subcases.length}}
   {{#each @subcases as |subcase|}}
-    <Subcases::SubcaseItem @case={{@case}} @subcase={{subcase}}>
+    <Subcases::SubcaseItem @decisionmakingFlow={{@decisionmakingFlow}} @subcase={{subcase}}>
       <div class="auk-hr">
         <hr />
       </div>
