--- a/app/components/subcases/subcases-overview-header.hbs
+++ b/app/components/subcases/subcases-overview-header.hbs
@@ -78,6 +78,7 @@
     @onClose={{this.closeAddSubcaseModal}}
     @onCreate={{this.onCreateSubcase}}
     @case={{@case}}
+    @decisionmakingFlow={{@decisionmakingFlow}}
   />
 {{/if}}
 
