--- a/app/components/subcases/subcases-process.hbs
+++ b/app/components/subcases/subcases-process.hbs
@@ -1,6 +1,6 @@
 <div class="auk-u-m-8">
   {{#each @subcases as |subcase|}}
-    <Subcases::SubcaseItem @case={{@case}} @subcase={{subcase}}>
+    <Subcases::SubcaseItem @decisionmakingFlow={{@decisionmakingFlow}} @subcase={{subcase}}>
       <div class="auk-hr">
         <hr />
       </div>
