--- a/app/templates/cases/case/subcases/subcase/overview.hbs
+++ b/app/templates/cases/case/subcases/subcase/overview.hbs
@@ -42,7 +42,7 @@
         @onSave={{this.saveGovernmentAreas}}
       />
       <Subcases::SubcasesHistory
-        @case={{this.case}}
+        @decisionmakingFlow={{this.decisionmakingFlow}}
         @subcases={{@model.siblingSubcases}}
         @page={{this.page}}
         @size={{this.size}}
