--- a/app/components/agenda/agenda-overview/agenda-overview-item.hbs
+++ b/app/components/agenda/agenda-overview/agenda-overview-item.hbs
@@ -42,6 +42,12 @@
               </pre>
             </LinkTo>
           </h4>
+          {{#if @isNew}}
+            <p class="auk-u-text-small au-u-muted auk-u-text-nowrap auk-u-mr-2">
+              <Auk::ColorBadge @skin="success" />
+              {{t "new-agendaitem"}}
+            </p>
+          {{/if}}
         </div>
         <div
           class="auk-o-flex auk-o-flex--vertical-center auk-o-flex--spaced"
@@ -151,17 +157,6 @@
             {{/if}}
           </div>
           <div class="vlc-agenda-items__icons">
-            <div class="auk-o-flex vlc-agenda-items__icons">
-              {{#if @isNew}}
-                <Auk::Icon @name="calendar-new" class="auk-u-ml-2">
-                  <EmberTooltip @side="top-end" @tooltipClass="tooltip-custom">
-                    <p>
-                      {{t "added-agendaitem-text"}}
-                    </p>
-                  </EmberTooltip>
-                </Auk::Icon>
-              {{/if}}
-            </div>
             <div class="vlc-agenda-meta__status-holder auk-u-ml-2">
               {{#if (and this.currentSession.isEditor @showFormallyOkStatus)}}
                 <p
