--- a/app/templates/cases/overview.hbs
+++ b/app/templates/cases/overview.hbs
@@ -1,5 +1,5 @@
 {{page-title (t "cases")}}
-<Cases::CasesHeader @close={{this.close}} />
+<Cases::CasesHeader @didCreateNewCase={{this.navigateToNewCase}} />
 <div class="auk-scroll-wrapper__body">
   <div class="auk-u-m-8">
     <Auk::Toolbar>
@@ -39,7 +39,7 @@
           <ThSortable
             class="auk-table__col--1"
             @currentSorting={{this.sort}}
-            @field="created"
+            @field="opened"
             @label={{t "created-on"}}
           />
           <th class="auk-table__col--1"></th>
@@ -49,20 +49,20 @@
         <c.body class="auk-table--clickable-rows" as |row|>
           <td {{on "click" (fn this.navigateToDecisionmakingFlow row)}}>
             <p>
-              {{#if row.shortTitle}}
-                {{row.shortTitle}}
+              {{#if row.case.shortTitle}}
+                {{row.case.shortTitle}}
               {{else}}
-                {{row.title}}
+                {{row.case.title}}
               {{/if}}
             </p>
           </td>
           <td {{on "click" (fn this.navigateToDecisionmakingFlow row)}}>
-            {{moment-format row.created "DD-MM-YYYY HH:mm"}}
+            {{moment-format row.opened "DD-MM-YYYY HH:mm"}}
           </td>
           <td class="auk-u-text-align--right">
             {{#if this.currentSession.isEditor}}
               <Auk::DropdownMenu @skin="borderless" @icon="three-dots" as |Menu|>
-                <Menu.Item {{on "click" (fn this.openEditCaseModal row)}}>
+                <Menu.Item {{on "click" (fn this.openEditCaseModal row.case)}}>
                   {{t "edit-case"}}
                 </Menu.Item>
                 <Menu.Item
@@ -70,15 +70,15 @@
                     "click"
                     (fn
                       (if
-                        row.isArchived
+                        row.case.isArchived
                         this.unarchiveCase
                         this.requestArchiveCase
                       )
-                      row
+                      row.case
                     )
                   }}
                 >
-                  {{t (if row.isArchived "unarchive-case" "archive-case")}}
+                  {{t (if row.case.isArchived "unarchive-case" "archive-case")}}
                 </Menu.Item>
               </Auk::DropdownMenu>
             {{/if}}
