refactor: dont let the EditCase component mutate the shortTitle directly

--- a/app/components/cases/edit-case.hbs
+++ b/app/components/cases/edit-case.hbs
@@ -6,7 +6,7 @@
   <Auk::Modal::Body>
     <div class="auk-form-group ">
       <Auk::Label>{{t "short-title-case"}}</Auk::Label>
-      <Auk::Textarea @rows="2" @value={{mut @case.shortTitle}} />
+      <Auk::Textarea @rows="2" @value={{mut this.shortTitle}} />
     </div>
   </Auk::Modal::Body>
   <Auk::Modal::Footer
