--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -9,7 +9,7 @@
 // @import "ember-appuniversum/c-alert";
 // @import "ember-appuniversum/c-app";
 @import "ember-appuniversum/c-badge";
-// @import "ember-appuniversum/c-body-container";
+@import "ember-appuniversum/c-body-container";
 // @import "ember-appuniversum/c-brand";
 @import "ember-appuniversum/c-button";
 @import "ember-appuniversum/c-button-group";
@@ -32,15 +32,15 @@
 @import "ember-appuniversum/c-link";
 @import "ember-appuniversum/c-list";
 @import "ember-appuniversum/c-list-horizontal";
-// @import "ember-appuniversum/c-list-navigation";
+@import "ember-appuniversum/c-list-navigation";
 // @import "ember-appuniversum/c-loader";
 // @import "ember-appuniversum/c-pagination";
 @import "ember-appuniversum/c-pill";
-// @import "ember-appuniversum/c-main-container";
+@import "ember-appuniversum/c-main-container";
 // @import "ember-appuniversum/c-main-header";
 // @import "ember-appuniversum/c-main-footer";
 @import "ember-appuniversum/c-modal";
-// @import "ember-appuniversum/c-sidebar";
+@import "ember-appuniversum/c-sidebar";
 // @import "ember-appuniversum/c-sidebar-action";
 // @import "ember-appuniversum/c-table";
 // @import "ember-appuniversum/c-textarea";
