refactor: publication/case route now uses decisionmaking-flow

--- a/app/templates/publications/publication/case.hbs
+++ b/app/templates/publications/publication/case.hbs
@@ -16,7 +16,7 @@
     />
 
     <Utils::GovernmentAreas::GovernmentAreasPanel
-      @governmentAreas={{this.model.case.governmentAreas}}
+      @governmentAreas={{this.decisionmakinFlow.governmentAreas}}
       @allowEditing={{not this.isViaCouncilOfMinisters}}
       @onSave={{this.saveGovernmentAreas}}
     />
