refactor: agendaitem route now uses decisionmaking-flow

--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -47,7 +47,7 @@
     @onSave={{this.saveMandateeData}}
   />
   <Utils::GovernmentAreas::GovernmentAreasPanel
-    @governmentAreas={{this.subcase.case.governmentAreas}}
+    @governmentAreas={{this.subcase.decisionmakingFlow.governmentAreas}}
     @allowEditing={{this.currentSession.isEditor}}
     @onSave={{this.saveGovernmentAreas}}
   />
