refactor: AgendaitemCasePanelView uses decisionmaking-flow

--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
@@ -22,7 +22,7 @@
                 @icon="chevron-right"
                 @route="cases.case.subcases.subcase.overview"
                 @disabled={{this.loadCase.isRunning}}
-                @models={{array this.case.id @subcase.id}}
+                @models={{array this.decisionmakingFlow.id @subcase.id}}
                 data-test-agendaitem-titles-link-to-subcase={{true}}
               >
                 {{t "to-subcase"}}
