--- a/app/templates/agenda/agendaitems/agendaitem/documents.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/documents.hbs
@@ -9,7 +9,7 @@
   <Toolbar.Group @position="right" as |Group|>
     {{#if this.model.pieces.length}}
       <Group.Item>
-        {{#if this.currentSession.isEditor}}
+        {{#if (user-may "manage-documents")}}
           <Auk::Button
             data-test-route-agenda---agendaitem-documents-batch-edit
             @icon="pencil"
@@ -18,7 +18,7 @@
           >
             {{t "batch-edit"}}
           </Auk::Button>
-        {{else}}
+        {{else if (not this.currentSession.isOverheid)}}
           <Auk::Button {{on "click" this.openBatchDetails}}>
             {{t "view-documents-details"}}
           </Auk::Button>
