fix: explicitly tell user we will delete ALL document versions

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -270,8 +270,8 @@
 {{/if}}
 {{#if this.isOpenVerifyDeleteModal}}
   <WebComponents::VlModalVerify
-    @title={{t "document-delete"}}
-    @message={{t "delete-document-message"}}
+    @title={{t "document-container-delete"}}
+    @message={{t "delete-document-container-message"}}
     @cancel={{this.cancelDeleteDocumentContainer}}
     @verify={{this.verifyDeleteDocumentContainer}}
   />
